# agentic-ai-python

./: README.md
EncompassAIAgent/: encompass_api_calls.py  encompass_devconnect_expert.py  encompass_devconnect_sitepages_crawl.py  readme.md  requirements.txt  streamlit_ui.py
EncompassAIAgentLangchain/: README.md  encompass_api_authtoken_server.py  encompass_api_documentation_server.py  encompass_api_getloans_server.py  encompass_devconnect_agent.py  encompass_mcp_fastapi.py  main.py  mathserver.py  pyproject.toml  requirements.txt  weatherserver.py
MyFirstAIAgent/: crawl_encompass_api_doc_extraction_strategies.py  crawl_encompass_api_doc_parallel.py  crawl_encompass_v1_pipeline_api_doc.py  requirements.txt
